--- a/chocolaty/packages.config
+++ b/chocolaty/packages.config
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
     <package id="7zip" />
+    <package id="curl" />
     <package id="git" />
-    <package id="qemu" />
+    <package id="keepass" />
+    <package id="nmap" />
+    <package id="openssh" />
     <package id="python" />
+    <package id="qemu" />
+    <package id="ripgrep" />
+    <package id="rustup" />
+    <package id="starship" />
     <package id="sudo" />
+    <package id="sysinternals" />
     <package id="vlc" />
+    <package id="which" />
     <package id="winmerge" />
     <package id="winscp" />
-    <package id="which" />
 
     <!--
     <package id="anotherPackage" version="1.1" />
