--- a/chocolatey/packages.config
+++ b/chocolatey/packages.config
@@ -14,6 +14,7 @@
     <package id="sudo" />
     <package id="sysinternals" />
     <package id="vlc" />
+    <!-- <package id="vscode" /> -->
     <package id="which" />
     <package id="winmerge" />
     <package id="winscp" />
