--- a/decwinc/decwinc-config.json
+++ b/decwinc/decwinc-config.json
@@ -42,7 +42,7 @@
       "ensure": "Present",
       "name": "hosts",
       "path": "c:/windows/system32/drivers/etc",
-      "text": "0.0.0.0    www.facebook.com"
+      "text": "0.0.0.0 www.facebook.com\n10.90.0.1 workspace-home.snet.sa.m-h.ug"
     },
     {
       "ensure": "Present",
@@ -54,7 +54,7 @@
       "ensure": "Present",
       "name": "chocolatey-packages.config",
       "path": "c:/ProgramData/decwinc/store",
-      "text": "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n<packages>\n    <package id=\"7zip\" />\n    <package id=\"curl\" />\n    <package id=\"git\" />\n    <package id=\"keepass\" />\n    <package id=\"nmap\" />\n    <package id=\"openssh\" />\n    <package id=\"python\" />\n    <package id=\"qemu\" />\n    <package id=\"ripgrep\" />\n    <package id=\"rustup.install\" />\n    <package id=\"starship\" />\n    <package id=\"sudo\" />\n    <package id=\"sysinternals\" />\n    <package id=\"vlc\" />\n    <!-- <package id=\"vscode\" /> -->\n    <package id=\"which\" />\n    <package id=\"winmerge\" />\n    <package id=\"winscp\" />\n\n    <!--\n    <package id=\"anotherPackage\" version=\"1.1\" />\n    <package id=\"chocolateytestpackage\" version=\"0.1\" source=\"somelocation\" />\n    <package id=\"alloptions\" version=\"0.1.1\"\n            source=\"https://somewhere/api/v2/\" installArguments=\"\"\n            packageParameters=\"\" forceX86=\"false\" allowMultipleVersions=\"false\"\n            ignoreDependencies=\"false\"\n            />\n    -->\n</packages>\n"
+      "text": "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n<packages>\n    <package id=\"7zip\" />\n    <package id=\"curl\" />\n    <package id=\"git\" />\n    <package id=\"keepass\" />\n    <package id=\"nmap\" />\n    <package id=\"openssh\" />\n    <package id=\"python\" />\n    <package id=\"qemu\" />\n    <package id=\"ripgrep\" />\n    <package id=\"rustup.install\" />\n    <package id=\"starship\" />\n    <package id=\"sudo\" />\n    <package id=\"sysinternals\" />\n    <package id=\"vlc\" />\n    <package id=\"which\" />\n    <package id=\"winmerge\" />\n    <package id=\"winscp\" />\n</packages>\n"
     },
     {
       "ensure": "Present",
