--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "vscode-dhall-lsp-server.executable": "${workspaceFolder}/decwinc/dhall-config/dhall-lsp-server.exe",
+    "vscode-dhall-lsp-server.executable": "decwinc/dhall-config/tools/dhall-lsp-server.exe",
 }
