--- a/decwinc/user-config.json
+++ b/decwinc/user-config.json
@@ -27,6 +27,13 @@
         "Register-ScheduledTask -TaskName 'DecWinC - User Updater' -Xml (get-content 'C:/Users/shug/AppData/Local/decwinc/store/scheduled_task-updater.xml' | out-string) -Force"
       ],
       "command": "powershell.exe"
+    },
+    {
+      "args": [
+        "import",
+        "C:/Users/shug/AppData/Local/decwinc/store/explorer-show-file-exts.reg"
+      ],
+      "command": "reg"
     }
   ],
   "filesystem": [
@@ -35,6 +42,12 @@
       "name": ".gitconfig",
       "path": "C:/Users/shug",
       "text": "[user]\n  email = s@m-h.ug\n  name = Sam Hug\n"
+    },
+    {
+      "ensure": "Present",
+      "name": "explorer-show-file-exts.reg",
+      "path": "C:/Users/shug/AppData/Local/decwinc/store",
+      "text": "Windows Registry Editor Version 5.00\n\n[HKEY_CURRENT_USER\\SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\Explorer\\Advanced]\n\"HideFileExt\"=dword:00000000\n"
     },
     {
       "ensure": "Present",
@@ -54,6 +67,5 @@
       "path": "C:/Users/shug/AppData/Local/decwinc/store",
       "text": "<?xml version=\"1.0\" encoding=\"UTF-16\"?>\n<Task version=\"1.2\" xmlns=\"http://schemas.microsoft.com/windows/2004/02/mit/task\">\n  <Triggers>\n    <CalendarTrigger>\n      <StartBoundary>2020-08-10T00:00:00</StartBoundary>\n      <Enabled>true</Enabled>\n      <ScheduleByDay>\n        <DaysInterval>1</DaysInterval>\n      </ScheduleByDay>\n    </CalendarTrigger>\n  </Triggers>\n  <Principals>\n    <Principal id=\"Author\">\n      <LogonType>InteractiveToken</LogonType>\n      <RunLevel>LeastPrivilege</RunLevel>\n    </Principal>\n  </Principals>\n  <Settings>\n    <MultipleInstancesPolicy>IgnoreNew</MultipleInstancesPolicy>\n    <DisallowStartIfOnBatteries>true</DisallowStartIfOnBatteries>\n    <StopIfGoingOnBatteries>true</StopIfGoingOnBatteries>\n    <AllowHardTerminate>true</AllowHardTerminate>\n    <StartWhenAvailable>true</StartWhenAvailable>\n    <RunOnlyIfNetworkAvailable>false</RunOnlyIfNetworkAvailable>\n    <IdleSettings>\n      <StopOnIdleEnd>true</StopOnIdleEnd>\n      <RestartOnIdle>false</RestartOnIdle>\n    </IdleSettings>\n    <AllowStartOnDemand>true</AllowStartOnDemand>\n    <Enabled>true</Enabled>\n    <Hidden>false</Hidden>\n    <RunOnlyIfIdle>false</RunOnlyIfIdle>\n    <WakeToRun>false</WakeToRun>\n    <ExecutionTimeLimit>PT4H</ExecutionTimeLimit>\n    <Priority>7</Priority>\n  </Settings>\n  <Actions Context=\"Author\">\n    <Exec>\n      <Command>powershell.exe</Command>\n      <Arguments>-File \"C:/Users/shug/AppData/Local/decwinc/store/updater-script.ps1\"</Arguments>\n    </Exec>\n  </Actions>\n</Task>\n"
     }
-  ],
-  "registry": []
+  ]
 }
