--- a/decwinc/user-config.json
+++ b/decwinc/user-config.json
@@ -66,7 +66,7 @@
       "ensure": "Present",
       "name": "cleanup-downloads.ps1",
       "path": "C:/Users/shug/AppData/Local/decwinc/store",
-      "text": "$Path = \"$env:USERPROFILE\\Downloads\"\n$Daysback = \"-60\"\n\n$CurrentDate = Get-Date\n$DatetoDelete = $CurrentDate.AddDays($Daysback)\nGet-ChildItem $Path | Where-Object { $_.LastWriteTime -lt $DatetoDelete } | Remove-Item\n"
+      "text": "$Path = \"$env:USERPROFILE\\Downloads\"\n$Daysback = \"-60\"\n\n$CurrentDate = Get-Date\n$DatetoDelete = $CurrentDate.AddDays($Daysback)\nGet-ChildItem $Path | Where-Object { $_.LastWriteTime -lt $DatetoDelete } | Remove-Item -Recurse -Force -Confirm:$false\n"
     },
     {
       "ensure": "Present",
