--- a/winenv-exec/Cargo.toml
+++ b/winenv-exec/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "decwinc"
+name = "winenv-exec"
 version = "0.1.0"
 authors = ["Sam Hug <s@m-h.ug>"]
 edition = "2018"
@@ -8,4 +8,5 @@ edition = "2018"
 gumdrop = "0.8.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_dhall = "0.6.0"
+
+# serde_dhall = "0.6.0"
